--- a/Fullstack Open part 3/Phonebook backend/package.json
+++ b/Fullstack Open part 3/Phonebook backend/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.15.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
